--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -14,7 +14,7 @@ img{
 a{
     text-decoration: none;
 }
-ul,ol{
+ul{
     list-style: none;
     display: inline-block;
     margin: 0;
@@ -29,10 +29,11 @@ body{
     justify-content: space-between;
     flex-direction: column;
     height: 100vh;
+    font-family: 'Barlow', sans-serif;
+    font-family: 'Fraunces', serif;
 }
 .container{
-    max-width: 100%;
-    width: 100%;
+    max-width: 1320px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 20px;
